--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #1B1C1C00;
     color: white;
     text-align: center;
     padding: 1em 0;
